firefox desktop emulator feature detect fix + disconnexion message on mobile clients

--- a/app/public/src/css/mobile.css
+++ b/app/public/src/css/mobile.css
@@ -8,3 +8,36 @@
 h2, #coords{
     text-align: center;
 }
+#openModal {
+    position: fixed;
+    font-family: Arial, Helvetica, sans-serif;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0,0,0,0.8);
+    z-index: 99999;
+    opacity:0;
+    -webkit-transition: opacity 400ms ease-in;
+    -moz-transition: opacity 400ms ease-in;
+    transition: opacity 400ms ease-in;
+    pointer-events: none;
+}
+#openModal.show {
+    opacity:1;
+    pointer-events: auto;
+}
+#openModal > div {
+    max-width: 400px;
+    position: relative;
+    margin: 10% auto;
+    padding: 5px 20px 13px 20px;
+    border-radius: 10px;
+    background: #fff;
+    background: -moz-linear-gradient(#fff, #999);
+    background: -webkit-linear-gradient(#fff, #999);
+    background: -o-linear-gradient(#fff, #999);
+}
+#openModal > div p {
+    text-align: center;
+}
